2006-03-27  Alan Modra  <amodra@bigpond.net.au>

	PR target/26459
	* config/rs6000/rs6000.md (DF reg move peephole): Prevent
	peephole removing spe frob_di_df_2.

2006-03-24  Alan Modra  <amodra@bigpond.net.au>

	PR target/26607
	* config/rs6000/darwin-ldouble.c: Don't compile when __NO_FPRS__
	or __LITTLE_ENDIAN__.

2006-03-23  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (alpha_legitimate_constant_p): Reject
	tls symbols.

	PR target/26347
	* config/alpha/predicates.md (local_symbolic_operand): Reject
	weak symbols.

2006-03-22  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin/bfin.h (ASM_FORMAT_PRIVATE_NAME): Remove.

2006-03-21  Jason Merrill  <jason@redhat.com>

	* builtins.c (expand_builtin_fork_or_exec): Fix pasto.

	PR middle-end/20297
	* expr.c (init_block_move_fn): Force default visibility.
	(init_block_clear_fn): Likewise.
	* builtins.c (expand_builtin_fork_or_exec): Likewise.
	* targhooks.c (default_external_stack_protect_fail): Likewise.

2006-03-16  David Edelsohn  <edelsohn@gnu.org>

	Backport from mainline.
	* config/rs6000/rs6000.c (rs6000_init_builtins): Change
	decl libname for clog to __clog on AIX.

2006-03-16  Steve Ellcey  <sje@cup.hp.com>

	PR target/25917
	Backport from mainline.
	* config/ia64/predicates.md (extr_len_operand): New predicate.
	* config/ia64/ia64.md (extv): Tighten constraints.
	(extzv): Ditto.
	(*tbit_and_2): Ditto.
	(*tbit_and_3): Ditto.
	(*tbit_or_2): Ditto.
	(*tbit_or_3): Ditto.
	(*bit_zero): Ditto.
	(*bit_one): Ditto.

2006-03-16  Paul Brook  <paul@codesourcery.com>

	Backport from mainline.
	* gcc/config/arm/arm.c (minipool_pad): New.
	(add_minipool_forward_ref): Include pool alignment padding in address
	calculation.
	(push_minipool_fix): Set minipool_pad.
	(minipool_pad): Ditto.

2006-03-14  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/19543
	Backport from mainline.
	* varasm.c (compare_constant) <INTEGER_CST>: Integer constants are
	only equivalent if the have both the same mode and precision.
